[gd_scene load_steps=8 format=3 uid="uid://0sftkimtxo67"]

[ext_resource type="Script" path="res://src/enchant.gd" id="1_ax5qy"]
[ext_resource type="Texture2D" uid="uid://cryylulirjn2d" path="res://assets/popup_background.png" id="1_ggkiw"]
[ext_resource type="Texture2D" uid="uid://cj0avjaofdsd1" path="res://assets/close_btn_normal.png" id="2_8hkak"]
[ext_resource type="Texture2D" uid="uid://bbr1ydo557c7a" path="res://assets/close_btn_pressed.png" id="3_vh1rm"]
[ext_resource type="Texture2D" uid="uid://cux4lrm11ph6c" path="res://assets/inventory_slot.png" id="5_3ang5"]
[ext_resource type="Texture2D" uid="uid://bd5jvqo2ta7i0" path="res://assets/biking_hat.png" id="6_4ur08"]
[ext_resource type="Texture2D" uid="uid://jhmdfjiuxplk" path="res://assets/rusty_sword.png" id="7_1g5w0"]

[node name="Enchant" type="CanvasLayer"]
script = ExtResource("1_ax5qy")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 183.0
offset_top = 48.0
offset_right = 831.0
offset_bottom = 701.0
texture = ExtResource("1_ggkiw")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 105.0
offset_top = 81.0
offset_right = 556.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "아이템 강화"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 528.0
offset_top = 80.0
offset_right = 560.0
offset_bottom = 112.0
texture_normal = ExtResource("2_8hkak")
texture_pressed = ExtResource("3_vh1rm")
texture_hover = ExtResource("3_vh1rm")

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 230.0
offset_top = 141.0
offset_right = 431.0
offset_bottom = 334.0
texture = ExtResource("5_3ang5")

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_4ur08")

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 253.0
offset_top = 345.0
offset_right = 412.0
offset_bottom = 383.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "현재 등급 : 2성"

[node name="Label3" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 253.0
offset_top = 385.0
offset_right = 412.0
offset_bottom = 423.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "다음 등급 : 3성"

[node name="Label4" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 253.0
offset_top = 425.0
offset_right = 412.0
offset_bottom = 463.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "성공률 : 30%"

[node name="Label5" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 253.0
offset_top = 461.0
offset_right = 447.0
offset_bottom = 499.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "스탯 증가율 : 10%"

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 95.0
offset_top = 517.0
offset_right = 556.0
offset_bottom = 573.0
theme_override_font_sizes/font_size = 24
text = "강화하기"

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 754.0
offset_top = 132.0
offset_right = 1195.0
offset_bottom = 627.0
texture = ExtResource("1_ggkiw")

[node name="Label" type="Label" parent="TextureRect2"]
layout_mode = 0
offset_left = 67.0
offset_top = 65.0
offset_right = 372.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "인벤토리 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect2"]
layout_mode = 0
offset_left = 68.0
offset_top = 112.0
offset_right = 371.0
offset_bottom = 424.0

[node name="GridContainer" type="GridContainer" parent="TextureRect2/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4

[node name="TextureRect" type="TextureRect" parent="TextureRect2/ScrollContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("5_3ang5")

[node name="TextureRect" type="TextureRect" parent="TextureRect2/ScrollContainer/GridContainer/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_1g5w0")

[node name="Label" type="Label" parent="TextureRect2/ScrollContainer/GridContainer/TextureRect"]
layout_mode = 0
offset_left = 45.0
offset_top = 45.0
offset_right = 64.0
offset_bottom = 71.0
text = "99"

[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/Button" to="." method="_on_button_pressed"]
